# fastapi-demo-project

./: .dockerignore  .env.dev  .env.sample  .gitignore  Dockerfile  compose.yaml  fill_fake_heroes.py  pyproject.toml
alembic/: env.py
alembic/versions/: 42022bfd0269_intergrate_hero_with_dateimemixin.py  6185a991de0c_initial_migration.py  902aac14d239_add_powers_column_to_heroes_table.py  f321df2cf6a5_add_collections_table.py
app/: lifespan.py  main.py
app/api/v1/: auth_route.py  collections_route.py  heroes_route.py  new_hero_route.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  redis_db.py  repository.py  security.py
app/domains/collections/: collections_repository.py  collections_service.py
app/domains/heroes/: heroes_repo.py  heroes_repository.py  heroes_serv.py  heroes_services.py
app/domains/users/: auth_dependencies.py  service_dependencies.py  user_repository.py  user_service.py
app/models/: __init__.py  collections.py  heroes.py  users.py
app/schemas/: auth.py  collections.py  heroes.py  heroes_filter.py  response.py  users.py
scripts/: fill_fake_heroes.py
